feat(frontend): Adição de validação dinâmica tanto no formulário quanto na action baseado no parâmetro do env

--- a/FrontEnd/.env.EXAMPLE
+++ b/FrontEnd/.env.EXAMPLE
@@ -1,8 +1,16 @@
 # Nome do seu bucket do Google Cloud Storage
-GCS_BUCKET_NAME=AquiVaiOnomeDoSeuBucket
+GCS_BUCKET_NAME=nome-do-bucket-de-entrada
+
 # Nome do bucket onde os arquivos de saída serão armazenados
 GCS_OUTPUT_BUCKET_NAME=nome-do-bucket-saida
+
 # Precisa ser o nome do arquivo de chave JSON que você baixou do Google Cloud Console
 # Certifique-se de que o arquivo de chave JSON esteja no mesmo diretório do seu projeto ou forneça o caminho completo
 # Se você não tiver um arquivo de chave, crie uma service account no Google Cloud Console e baixe o arquivo de chave JSON
 GCS_KEY_FILENAME=AquiVaiONomeDoSeuArquivoDeChave.json
+
+# Tamanho máximo validado no formulário e na server action
+# Define o tamanho máximo de redimensionamento de imagem permitido
+# Padrão é 4000 pixels, mas você pode ajustar conforme necessário
+NEXT_PUBLIC_MAX_IMAGE_DIMENSION=4000
+MAX_IMAGE_DIMENSION=4000
